force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APMS_Application__c.field-meta.xml
<CustomField>
    <fullName>APMS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APMS Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Apttus Contracts</relationshipLabel>
    <relationshipName>Apttus_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>