force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Agreement_Date__c</fullName>
    <inlineHelpText>For Ariba Migration purposes</inlineHelpText>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>