force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_APPC_Count__c.field-meta.xml
<CustomField>
    <fullName>APT_APPC_Count__c</fullName>
    <label>APPC Count</label>
    <summaryFilterItems>
        <field>Apttus__AgreementLineItem__c.Apttus__Description__c</field>
        <operation>equals</operation>
        <value>Australia Post Parcel Contract</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>