force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Comments_4__c.field-meta.xml
<CustomField>
    <fullName>APT_Comments_4__c</fullName>
    <label>Comments 4</label>
    <length>250</length>
    <type>Text</type>
</CustomField>