force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Commercial_Contact__c.field-meta.xml
<CustomField>
    <fullName>APT_Commercial_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer Commercial Contact</inlineHelpText>
    <label>Customer Contact For Notices</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (Commercial Contact)</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>