force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>