force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Contract</fullName>
                <default>true</default>
                <label>New Contract</label>
            </value>
            <value>
                <fullName>DoV Contract</fullName>
            </value>
            <value>
                <fullName>Renewal Contract</fullName>
            </value>
            <value>
                <fullName>Migrated Contract</fullName>
            </value>
            <value>
                <fullName>DoV From ST Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>