force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value of the Contract. Should be approx value</description>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>