force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Count_of_DoV_Language__c.field-meta.xml
<CustomField>
    <fullName>APT_Count_of_DoV_Language__c</fullName>
    <description>Counter for sentence/plural sentences in DOV Template</description>
    <label>Count of DoV Language</label>
    <summaryFilterItems>
        <field>APT_DoV_Language__c.APT_DoV_Action__c</field>
        <operation>equals</operation>
        <value>Add New Product</value>
    </summaryFilterItems>
    <summaryForeignKey>APT_DoV_Language__c.APT_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>