force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Creator_Role__c.field-meta.xml
<CustomField>
    <fullName>APT_Creator_Role__c</fullName>
    <description>To capture the role of the creator at the time of creation.</description>
    <label>Creator Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>