force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Cubic_Factor_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>APT_Cubic_Factor_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cubic Factor Review Completed</label>
    <type>Checkbox</type>
</CustomField>