force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Current_Quote_Indicator__c.field-meta.xml
<CustomField>
    <fullName>APT_Current_Quote_Indicator__c</fullName>
    <label>Current Quote Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>