force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_DOV_Language__c.field-meta.xml
<CustomField>
    <fullName>APT_DOV_Language__c</fullName>
    <label>DOV Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express eParcel - Add</fullName>
            </value>
            <value>
                <fullName>Express eParcel - Replace</fullName>
            </value>
            <value>
                <fullName>Express eParcel - Delete</fullName>
            </value>
            <value>
                <fullName>eParcel - Add</fullName>
            </value>
            <value>
                <fullName>eParcel - Replace</fullName>
            </value>
            <value>
                <fullName>eParcel - Delete</fullName>
            </value>
            <value>
                <fullName>Parcel Post - Add</fullName>
            </value>
            <value>
                <fullName>Parcel Post - Replace</fullName>
            </value>
            <value>
                <fullName>Parcel Post - Delete</fullName>
            </value>
            <value>
                <fullName>International - Add</fullName>
            </value>
            <value>
                <fullName>International - Replace</fullName>
            </value>
            <value>
                <fullName>International - Delete</fullName>
            </value>
            <value>
                <fullName>Letters - Add</fullName>
            </value>
            <value>
                <fullName>Letters - Replace</fullName>
            </value>
            <value>
                <fullName>Letters - Delete</fullName>
            </value>
            <value>
                <fullName>Returns - Add</fullName>
            </value>
            <value>
                <fullName>Returns - Replace</fullName>
            </value>
            <value>
                <fullName>Returns - Delete</fullName>
            </value>
            <value>
                <fullName>UMS - Add</fullName>
            </value>
            <value>
                <fullName>UMS - Replace</fullName>
            </value>
            <value>
                <fullName>UMS - Delete</fullName>
            </value>
            <value>
                <fullName>Print Post - Add</fullName>
            </value>
            <value>
                <fullName>Print Post - Replace</fullName>
            </value>
            <value>
                <fullName>Print Post - Delete</fullName>
            </value>
            <value>
                <fullName>Post Billpay - Add</fullName>
            </value>
            <value>
                <fullName>Post Billpay - Replace</fullName>
            </value>
            <value>
                <fullName>Post Billpay - Delete</fullName>
            </value>
            <value>
                <fullName>SecurePay Online Payments - Add</fullName>
            </value>
            <value>
                <fullName>SecurePay Online Payments - Replace</fullName>
            </value>
            <value>
                <fullName>SecurePay Online Payments - Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>