force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Generate_Operational_Schedule__c.field-meta.xml
<CustomField>
    <fullName>APT_Generate_Operational_Schedule__c</fullName>
    <formula>IF ( ISPICKVAL( Apttus__Subtype__c , &apos;Short Form&apos;) , 
HYPERLINK(&quot;apex/APT_GenerateOperationalSchedule?parentId=&quot; &amp;Id &amp;&quot;&amp;templateID=&quot;+ $Label.APT_ShortFormTemplateID +&quot;&amp;docFormat=DOC&quot;, IMAGE(&quot;/resource/APT_Create1&quot;, &quot;Create&quot;),&quot;_self&quot;), 

 IF(AND(ISPICKVAL( Apttus__Subtype__c , &apos;Long Form&apos;), ISPICKVAL(  Term__c , &apos;Open Ended&apos;)), HYPERLINK(&quot;apex/APT_GenerateOperationalSchedule?parentId=&quot; &amp;Id &amp;&quot;&amp;templateID=&quot;+ $Label.APT_LongFormOEOSID +&quot;&amp;docFormat=DOC&quot;, IMAGE(&quot;/resource/APT_Create1&quot;, &quot;Create&quot;),&quot;_self&quot;), 


 IF(AND(ISPICKVAL( Apttus__Subtype__c , &apos;Long Form&apos;), ISPICKVAL(  Term__c , &apos;Fixed Term&apos;)), HYPERLINK(&quot;apex/APT_GenerateOperationalSchedule?parentId=&quot; &amp;Id &amp;&quot;&amp;templateID=&quot;+ $Label.APT_LongFormFTOSID +&quot;&amp;docFormat=DOC&quot;, IMAGE(&quot;/resource/APT_Create1&quot;, &quot;Create&quot;),&quot;_self&quot;), null) ) 

)</formula>
    <inlineHelpText>Generates Detailed OS in MS Word</inlineHelpText>
    <label>Detailed Operational Schedule (DOS)</label>
    <type>Text</type>
</CustomField>