force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Generate_Site_Inspection_Form__c.field-meta.xml
<CustomField>
    <fullName>APT_Generate_Site_Inspection_Form__c</fullName>
    <formula>IF (NOT( ISBLANK(APT_Site_Inspection__c )), HYPERLINK(&quot;apex/APT_GenerateOperationalSchedule?parentId=&quot; &amp;Id &amp;&quot;&amp;templateID=&quot;+ $Label.APT_SiteInspectionTemplateId +&quot;&amp;docFormat=DOC&quot;, IMAGE(&quot;/resource/APT_GenerateSiteInspectionForm&quot;, &quot;Generate&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Site Inspection Form</label>
    <type>Text</type>
</CustomField>