force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Generated_Doc_Ids__c.field-meta.xml
<CustomField>
    <fullName>APT_Generated_Doc_Ids__c</fullName>
    <label>Generated Doc Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>