force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_has_file__c.field-meta.xml
<CustomField>
    <fullName>APT_has_file__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apttus Contract Record has a file(s)</description>
    <inlineHelpText>Apttus Contract Record has a file(s)</inlineHelpText>
    <label>Agreement Attached</label>
    <type>Checkbox</type>
</CustomField>