force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_International_Indicator__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Indicator__c</fullName>
    <description>For SAP Mapping: International Indicator</description>
    <inlineHelpText>For SAP Mapping: International Indicator</inlineHelpText>
    <label>International Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>