force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Legal_Entity_Name__c</fullName>
    <formula>Apttus__Related_Opportunity__r.Account.Name</formula>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>