force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Material_And_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>APT_Material_And_Material_Description__c</fullName>
    <description>For SAP Mapping: Material (SAP ERP Material Code) and Material description</description>
    <inlineHelpText>For SAP Mapping: Material (SAP ERP Material Code) and Material description</inlineHelpText>
    <label>Material &amp; Material Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>