force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Merge_Documents__c.field-meta.xml
<CustomField>
    <fullName>APT_Merge_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge Documents?</label>
    <type>Checkbox</type>
</CustomField>