force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_New_Rate_Card_Download__c.field-meta.xml
<CustomField>
    <fullName>APT_New_Rate_Card_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Rate Card Download</label>
    <type>Checkbox</type>
</CustomField>