force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Operational_contact__c.field-meta.xml
<CustomField>
    <fullName>APT_Operational_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact for eParcel setup</inlineHelpText>
    <label>Operational Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (Operational contact)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>