force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Original_Quotation_No__c.field-meta.xml
<CustomField>
    <fullName>APT_Original_Quotation_No__c</fullName>
    <label>Original Quotation No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>