force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Pricing_Category__c.field-meta.xml
<CustomField>
    <fullName>APT_Pricing_Category__c</fullName>
    <inlineHelpText>Identify whether this is standard or customised pricing.</inlineHelpText>
    <label>Pricing Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Customised</fullName>
            </value>
            <value>
                <fullName>Offline Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>