force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Product__c</fullName>
    <description>Field Created for Ariba mapping purposes</description>
    <inlineHelpText>Ariba migrated field</inlineHelpText>
    <label>Product</label>
    <type>TextArea</type>
</CustomField>