force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Product_group__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_group__c</fullName>
    <label>Product Group</label>
    <length>55</length>
    <type>Text</type>
</CustomField>