force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_QuoteNoCurr__c.field-meta.xml
<CustomField>
    <fullName>APT_QuoteNoCurr__c</fullName>
    <inlineHelpText>Mapping field (SAP/Ariba)</inlineHelpText>
    <label>QuoteNoCurr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>