force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Registered_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Registered_Business_Name__c</fullName>
    <description>Created for Ariba mapping purposes. Reused for future records with Sellers input. Auto poppulated with Organisation Name upon Agreement creation. Mandatory on the layout</description>
    <label>Registered Business Name</label>
    <type>TextArea</type>
</CustomField>