force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Remove_Standalone_Docs__c.field-meta.xml
<CustomField>
    <fullName>APT_Remove_Standalone_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Standalone Docs</label>
    <type>Checkbox</type>
</CustomField>