force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Send_Applications__c.field-meta.xml
<CustomField>
    <fullName>APT_Send_Applications__c</fullName>
    <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;)),HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p3_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=%2F&quot;&amp;Id&amp;&quot;&amp;new_template=1&amp;template_id=&quot;&amp;$Setup.APT_R2T_System_Properties__c.APT_PBP_Email_Template_ID__c , IMAGE(&quot;/resource/APT_SendApplications&quot;, &quot;Send Applications&quot;), &quot;_self&quot;), NULL)</formula>
    <inlineHelpText>Send Applications and Questionnaires after sending LOI for Signatures</inlineHelpText>
    <label>Send Applications</label>
    <type>Text</type>
</CustomField>