force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Submit_TE_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>APT_Submit_TE_for_Approval__c</fullName>
    <formula>IF ( 
OR( 
AND (ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status__c,&quot;Author Contract&quot;)), 
AND (ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status__c,&quot;Submitted Request&quot;)), 
AND( 
ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;), 
OR(ISPICKVAL(Apttus__Status__c,&quot;Request&quot;),ISPICKVAL(Apttus__Status__c,&quot;In Amendment&quot;),ISPICKVAL(Apttus__Status__c,&quot;In Renewal&quot;),ISPICKVAL(Apttus__Status__c,&quot;&quot;)) 
) 
), HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalContextSubmit?sObjectType=Apttus__APTS_Agreement__c&amp;sObjectId=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_SubmitRequest&quot;, &quot;Submit Request&quot;),&quot;_self&quot;), NULL)</formula>
    <label>Submit TE for Approval</label>
    <type>Text</type>
</CustomField>