force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_Submitted_Async_Merge_Call_Ids__c.field-meta.xml
<CustomField>
    <fullName>APT_Submitted_Async_Merge_Call_Ids__c</fullName>
    <label>Submitted Async Merge Call Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>