force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_System_User__c.field-meta.xml
<CustomField>
    <fullName>APT_System_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer System User</inlineHelpText>
    <label>System User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (System User)</relationshipLabel>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>