force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_UMS_Volume_or_Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>APT_UMS_Volume_or_Estimated_Revenue__c</fullName>
    <inlineHelpText>UMS Volume or Estimated Revenue</inlineHelpText>
    <label>UMS Volume Or Estimated Revenue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>