force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APT_WFV_Count_Police_and_Visa_Check__c.field-meta.xml
<CustomField>
    <fullName>APT_WFV_Count_Police_and_Visa_Check__c</fullName>
    <description>Used for the Workforce Verification product and checked when Feature Type equals Police and Visa Check</description>
    <label>WFV Count Police and Visa Check</label>
    <summaryFilterItems>
        <field>Apttus__AgreementLineItem__c.APT_WFV_Police_and_Visa_Check__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>