force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTContract_Party_Legal_and_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>APTContract_Party_Legal_and_Trading_Name__c</fullName>
    <description>Created for Ariba mapping purposes. Reused for future records with Sellers input</description>
    <label>Contract Party Legal And Trading Name</label>
    <type>TextArea</type>
</CustomField>