force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Activated_By__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Activated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who activated the agreement in the system</description>
    <inlineHelpText>.</inlineHelpText>
    <label>Activated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APTS_Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>